WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27257
[Qt] DumpRenderTree no longer builds with Qt4.4
https://bugs.webkit.org/show_bug.cgi?id=27257
Summary
[Qt] DumpRenderTree no longer builds with Qt4.4
Laszlo Gombos
Reported
2009-07-14 05:44:09 PDT
Changeset 45817 introduced a Qt 4.5 build dependency for DumpRenderTree. I propose to flag this dependency to allow building QtWebKit on top of Qt 4.4.
Attachments
Proposed fix.
(1.13 KB, patch)
2009-07-14 05:49 PDT
,
Laszlo Gombos
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2009-07-14 05:49:01 PDT
Created
attachment 32708
[details]
Proposed fix.
Simon Hausmann
Comment 2
2009-07-14 06:03:43 PDT
Comment on
attachment 32708
[details]
Proposed fix. r=me. thanks :)
Simon Hausmann
Comment 3
2009-07-14 06:04:48 PDT
Landed in
r45856
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug