2009-07-14  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] DumpRenderTree no longer builds with Qt4.4
        https://bugs.webkit.org/show_bug.cgi?id=27257

        Flag Qt 4.5 dependency to allow building with Qt 4.4.

        * DumpRenderTree/qt/main.cpp:
        (main):

Canonical link: https://commits.webkit.org/37490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45856 268f45cc-cd09-0410-ab3c-d52691b4dbfc